working and images

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Survey Page</title>
-
-
+    <title>Home Page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="./style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
@@ -18,20 +17,19 @@
     <div class="container">
 
         <div class="jumbotron">
-            <h1 class="text-center">
-                    
-                <i class="fas fa-user-friends"></i>...Friend Finder Survey...<i class="fas fa-user-friends"></i>
-            </h1>
-            <hr>
-            <h2 class="text-center">Welcome to the Friend Finder Survey.</h2>
-            <br>
+            <image class="mx-auto d-block" src="https://thefireescapeartist.files.wordpress.com/2014/06/top-gear.jpg"/>
+            <h2 class="text-center">Welcome to the Top Gear Friend Finder Survey</h2>
+            <h4 class="text-center">Click below to start the survey and find your best friend... In the World.</h4>
             <div class="text-center">
-                <a href="/survey">
-                    <button class="btn btn-lg btn-default">
-                        Continue
-                    </button>
-                </a>
-            </div>
+                    <a href="/survey">
+                        <button class="btn btn-lg btn-warning">
+                            Start Survey
+                        </button>
+                    </a>
+                </div>
+        </div>
+        <div>
+            
         </div>
     </div>
 </body>
