--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Survey Page</title>
-
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="./style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 
@@ -18,21 +17,11 @@
     <div class="container">
 
         <div class="jumbotron">
-            <h1 class="text-center">
-                <i class="fas fa-user-friends"></i>...<i class="fas fa-arrow-right"></i>...Friend Finder Survey...<i class="fas fa-arrow-left"></i>...<i class="fas fa-user-friends"></i>
-            </h1>
-            <hr>
+            <image class="mx-auto d-block" src="https://thefireescapeartist.files.wordpress.com/2014/06/top-gear.jpg"/>
             <h4 class="text-center">Rate how much you agree with the statments below with 5 being the most and 1 being
-                the least.</h4>
-            <br>
-            <div class="text-center">
-                <a href="/">
-                    <button class="btn btn-lg btn-default">
-                        <span class="fa fa-home"></span>
-                    </button>
-                </a>
-            </div>
+                    the least.</h4>
         </div>
+        
         <div class="row">
             <div class="col-lg-12">
                 <!-- Survey Page -->
@@ -200,6 +189,11 @@
                                     </div>                                        
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <a href="/">
+                                            <button class="btn btn-lg btn-default">
+                                                <span class="fa fa-home"></span>
+                                            </button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
